Set correct azimuth/elevation when source = listener

When the source and the listener are at the same position, set the
azimuth and elevation to zero in accordance with the panning algorithm
in the spec.

Add tests for this as well.

Bug: 729523
Test: Panner/panner-equalpower.html
Change-Id: I5787c95175fabedf0e5f4e484f315c9e10507568
Reviewed-on: https://chromium-review.googlesource.com/552821
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486658}
Former-commit-id: ce375b903c2d152d662527b8d5d45e97ce59096f